Mon Sep 18 11:55:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloccheck now includes a naive memory allocation function to
	  use before malloc() and friends are found.  This removes the
	  gross dependency on glibc2 internals.

Mon Sep 18 10:57:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added malloccheck.c to the distribution.

Fri Sep 15 19:02:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an LD_PRELOADable library to do some malloc() etc checking.
	  (Currently doesn't yet do leak checking, but does the accounting.)
	  May not work on non-glibc2 systems.

	* Simplified omerr_tostring so that it uses OmError::get_type().

Fri Sep 15 18:53:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix minor bug in newly altered weighting formula, and update tests
	  to expect new values.

Fri Sep 15 18:14:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Allow users to set the parameters used in the BM25 and traditional
	  weighting schemes.  Documented, but not tested.

Fri Sep 15 15:02:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved todo.xml to docs/

	* TODO is now generated from a rule in the root directory

	* TODO and docs/todo.html not generated if XML::Parser isn't
	  installed.

Fri Sep 15 13:26:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an AC_MSG_WARN if validation is not supported

Fri Sep 15 12:59:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hopefully fixed problems with older libxml not supporting
	  validation.

Fri Sep 15 12:01:34 BST 2000 Olly Betts

	* TODO and todo.html now generated from master todo.xml.

Fri Sep 15 09:07:04 BST 2000 Olly Betts

	* HTML TODO list coloured by priority.

Thu Sep 14 19:46:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add some tests for QuartzDbEntries object.  Need more.

	* Changed QuartzDbTable so that its methods merely Assert that keys